Enable plaintext HTTP connections too, for now.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -25,8 +25,14 @@ defaults
 	errorfile 503 /etc/haproxy/errors/503.http
 	errorfile 504 /etc/haproxy/errors/504.http
 
-frontend frontend
+frontend frontend-ssl
   bind *:443 ssl crt /etc/ssl/proxy.pem
+  mode http
+  option httplog
+  default_backend website
+
+frontend frontend-plain
+  bind *:80
   mode http
   option httplog
   default_backend website
@@ -35,7 +41,7 @@ backend website
     mode http
     option httplog
     balance roundrobin
-    server sb1 108.168.183.163:8080
+    server web1 108.168.183.163:8080
     
 listen stats *:1936
     stats enable
