Add a rule for player

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -29,13 +29,23 @@ frontend frontend-ssl
   bind *:443 ssl crt /etc/ssl/proxy.pem
   mode http
   option httplog
+  acl player path_beg -i /play
+  use_backend player	if player
   default_backend website
 
 frontend frontend-plain
   bind *:80
   mode http
   option httplog
+  acl player path_beg -i /play
+  use_backend player	if player
   default_backend website
+
+backend player
+  mode http
+  option httplog
+  balance roundrobin
+  server player1 108.168.183.163:9443
 
 backend website
     mode http
