Do not verify backend SSL cert.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -45,7 +45,7 @@ backend player
   mode http
   option httplog
   balance roundrobin
-  server player1 108.168.183.163:9443
+  server player1 108.168.183.163:9443 ssl verify none
 
 backend website
     mode http
