--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -31,6 +31,10 @@ frontend frontend-ssl
   option httplog
   acl player path_beg -i /play
   use_backend player	if player
+  acl room	 path_beg -i /rooms
+  use_backend room		if room
+  acl concierge path_beg -i /concierge
+  use_backend concierge if concierge
   default_backend website
 
 frontend frontend-plain
@@ -40,6 +44,18 @@ frontend frontend-plain
   acl player path_beg -i /play
   use_backend player	if player
   default_backend website
+
+backend room
+  mode http
+  option httplog
+  balance roundrobin
+  server room1 108.168.183.163:9080
+  
+backend concierge
+  mode http
+  option httplog
+  balance roundrobin
+  server room1 108.168.183.163:9081
 
 backend player
   mode http
