Whoops, got one of the backends wrong.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -55,7 +55,7 @@ backend concierge
   mode http
   option httplog
   balance roundrobin
-  server room1 108.168.183.163:9081
+  server concierge1 108.168.183.163:9081
 
 backend player
   mode http
