Don't care about HTTP vs. HTTPS just yet.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -43,6 +43,10 @@ frontend frontend-plain
   option httplog
   acl player path_beg -i /play
   use_backend player	if player
+  acl room	 path_beg -i /rooms
+  use_backend room		if room
+  acl concierge path_beg -i /concierge
+  use_backend concierge if concierge
   default_backend website
 
 backend room
