Update the proxy s.t. requests to /web now load the webapp. /play will no longer host an HTML.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -29,6 +29,8 @@ frontend frontend-ssl
   bind *:443 ssl crt /etc/ssl/proxy.pem
   mode http
   option httplog
+  acl webapp path_beg -i /web
+  use_backend webapp if webapp
   acl player path_beg -i /play
   use_backend player	if player
   acl room	 path_beg -i /rooms
@@ -41,6 +43,8 @@ frontend frontend-plain
   bind *:80
   mode http
   option httplog
+  acl webapp path_beg -i /web
+  use_backend webapp if webapp
   acl player path_beg -i /play
   use_backend player	if player
   acl room	 path_beg -i /rooms
@@ -66,6 +70,12 @@ backend player
   option httplog
   balance roundrobin
   server player1 108.168.183.163:9443 ssl verify none
+
+backend webapp
+  mode http
+  option httplog
+  balance roundrobin
+  server webapp1 108:168.183.163:3000
 
 backend website
     mode http
