Try to make the proxy better.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -29,8 +29,8 @@ frontend frontend-ssl
   bind *:443 ssl crt /etc/ssl/proxy.pem
   mode http
   option httplog
-  acl webapp path_beg -i /web
-  use_backend webapp if webapp
+  acl webapp path_beg -i /app
+  use_backend webapp	if webapp
   acl player path_beg -i /play
   use_backend player	if player
   acl room	 path_beg -i /rooms
@@ -43,8 +43,8 @@ frontend frontend-plain
   bind *:80
   mode http
   option httplog
-  acl webapp path_beg -i /web
-  use_backend webapp if webapp
+  acl webapp path_beg -i /app
+  use_backend webapp	if webapp
   acl player path_beg -i /play
   use_backend player	if player
   acl room	 path_beg -i /rooms
