Wire in dockerui.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -10,6 +10,9 @@ global
 
 	ssl-default-bind-ciphers kEECDH+aRSA+AES:kRSA+AES:+AES256:RC4-SHA:!kEDH:!LOW:!EXP:!MD5:!aNULL:!eNULL
 
+userlist admins
+  user admin insecure-password PLACEHOLDER_PASSWORD
+
 defaults
 	log	global
 	mode	http
@@ -37,6 +40,8 @@ frontend frontend-ssl
   use_backend room		if room
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
+  acl dockerui path_beg -i /docker
+  use_backend dockerui if dockerui
   default_backend website
 
 frontend frontend-plain
@@ -77,6 +82,14 @@ backend webapp
   balance roundrobin
   server webapp1 108.168.183.163:3000
 
+backend dockerui
+    mode http
+    option httplog
+    balance roundrobin
+    server dockerui1 108.168.183.163:9000
+	acl auth_ok http_auth(admins)
+	http-request auth unless auth_ok
+	
 backend website
     mode http
     option httplog
