Make it HTTP or HTTPS for Dockerui and also try to do some path rewrites.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -32,30 +32,46 @@ frontend frontend-ssl
   bind *:443 ssl crt /etc/ssl/proxy.pem
   mode http
   option httplog
+  
   acl webapp path_beg -i /app
   use_backend webapp	if webapp
+  
   acl player path_beg -i /play
   use_backend player	if player
+  
   acl room	 path_beg -i /rooms
   use_backend room		if room
+  
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
+  
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
+  http-request set-path / 	if dockerui
+  
   default_backend website
 
 frontend frontend-plain
   bind *:80
   mode http
   option httplog
+  
   acl webapp path_beg -i /app
   use_backend webapp	if webapp
+  
   acl player path_beg -i /play
   use_backend player	if player
+  
   acl room	 path_beg -i /rooms
   use_backend room		if room
+  
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
+  
+  acl dockerui path_beg -i /docker
+  use_backend dockerui	if dockerui
+  http-request set-path / 	if dockerui
+  
   default_backend website
 
 backend room
@@ -83,12 +99,12 @@ backend webapp
   server webapp1 108.168.183.163:3000
 
 backend dockerui
-    mode http
-    option httplog
-    balance roundrobin
-    server dockerui1 108.168.183.163:9000
-	acl auth_ok http_auth(admins)
-	http-request auth unless auth_ok
+  mode http
+  option httplog
+  balance roundrobin
+  server dockerui1 108.168.183.163:9000
+  acl auth_ok http_auth(admins)
+  http-request auth unless auth_ok
 	
 backend website
     mode http
