--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -47,7 +47,6 @@ frontend frontend-ssl
   
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
-  http-request set-path / 	if dockerui
   
   default_backend website
 
@@ -70,7 +69,6 @@ frontend frontend-plain
   
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
-  http-request set-path / 	if dockerui
   
   default_backend website
 
@@ -102,6 +100,7 @@ backend dockerui
   mode http
   option httplog
   balance roundrobin
+  reqrep ^([^\ :]*)\ /docker/(.*)     \1\ /\2
   server dockerui1 108.168.183.163:9000
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
