Try some other syntaxes.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -69,6 +69,7 @@ frontend frontend-plain
   
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
+  reqrep ^([^\ :]*)\ /docker/(.*)     \1\ /\2  if dockerui
   
   default_backend website
 
@@ -100,7 +101,6 @@ backend dockerui
   mode http
   option httplog
   balance roundrobin
-  reqrep ^([^\ :]*)\ /docker/(.*)     \1\ /\2
   server dockerui1 108.168.183.163:9000
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
