Gettin weird in here.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -69,7 +69,6 @@ frontend frontend-plain
   
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
-  reqrep ^([^\ :]*)\ /docker/(.*)     \1\ /\2  if dockerui
   
   default_backend website
 
@@ -104,6 +103,7 @@ backend dockerui
   server dockerui1 108.168.183.163:9000
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
+  reqrep ^([^\ :]*)\ /docker(.*)     \1\ /\2  if dockerui
 	
 backend website
     mode http
