I will get this right if it kills me.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -103,7 +103,7 @@ backend dockerui
   server dockerui1 108.168.183.163:9000
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
-  reqrep ^([^\ :]*)\ /docker(.*)     \1\ /\2  if dockerui
+  reqrep ^([^\ :]*)\ /docker(.*)     \1\ /\2
 	
 backend website
     mode http
