--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -47,7 +47,6 @@ frontend frontend-ssl
   
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
-  reqrep ^([^\ :]*)\ /docker(.*)     \1\ /\2 if dockerui
   
   default_backend website
 
@@ -104,6 +103,7 @@ backend dockerui
   server dockerui1 108.168.183.163:9000
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
+  reqrep ^([^\ ]*\ /)docker[/]?(.*) \1\2 
 	
 backend website
     mode http
