Add elk access.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -47,6 +47,9 @@ frontend frontend-ssl
   
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
+
+  acl elk path_beg -i /logs
+  use_backend elk	if elk
   
   default_backend website
 
@@ -69,6 +72,9 @@ frontend frontend-plain
   
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
+
+  acl elk path_beg -i /logs
+  use_backend elk	if elk
   
   default_backend website
 
@@ -110,6 +116,15 @@ backend website
     option httplog
     balance roundrobin
     server web1 108.168.183.163:8080
+    
+backend elk
+	mode http
+	option httplog
+	balance roundrobin
+	server elk1 108.168.183.163:5601
+    acl auth_ok http_auth(admins)
+    http-request auth unless auth_ok
+    reqrep ^([^\ ]*\ /)elk[/]?(.*) \1\2 
     
 listen stats *:1936
     stats enable
