Better build and actually remove the correct path.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -124,7 +124,7 @@ backend elk
 	server elk1 108.168.183.163:5601
     acl auth_ok http_auth(admins)
     http-request auth unless auth_ok
-    reqrep ^([^\ ]*\ /)elk[/]?(.*) \1\2 
+    reqrep ^([^\ ]*\ /)logs[/]?(.*) \1\2 
     
 listen stats *:1936
     stats enable
