Try to improve log level.

--- a/haproxy-rsyslog.conf
+++ b/haproxy-rsyslog.conf
@@ -1,9 +1,5 @@
-# Create an additional socket in haproxy's chroot in order to allow logging via
-# /dev/log to chroot'ed HAProxy processes
-$AddUnixListenSocket /var/lib/haproxy/dev/log
+$ModLoad imudp
+$UDPServerRun 514
 
-# Send HAProxy messages to a dedicated logfile
-if $programname startswith 'haproxy' then /var/log/haproxy.log
-&~
-
-local0.* /var/log/haproxy.log
+local0.* -/var/log/haproxy.log
+local1.* -/var/log/haproxy.log
