Fix that URL, we'll just have to update Kibana.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -58,7 +58,7 @@ frontend frontend-plain
   mode http
   option httplog
   
-  acl webapp path_beg -i /game
+  acl webapp path_beg -i /app
   use_backend webapp	if webapp
   
   acl player path_beg -i /play
