Logstash can act as its OWN syslog drain!

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -1,18 +1,16 @@
 input {
   syslog {
-    type => "haproxy-access"
+    type => "haproxy"
     port => 514
   }
 }
 
 filter {
-  if [path] =~ "access" {
-    mutate { replace => { "type" => "nginx_access" } }
-    grok { 
-      type => "haproxy-access"
+  if [path] =~ "syslog" {
+    mutate { replace => { "type" => "haproxy" } }
+    grok {
+      match => { "message" => "%{HAPROXYHTTP}" }
       patterns_dir => ["/opt/logstash-2.0.0/patterns"]
-      pattern => "%{HAPROXYHTTP}"
-      named_captures_only => true
     }
   }
   date {
