Finally fix the stupid log pattern.

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -1,20 +1,19 @@
 input {
-  syslog {
-    type => "haproxy"
+  tcp {
+    port => 514
+  }
+  udp {
     port => 514
   }
 }
 
 filter {
-  if [path] =~ "syslog" {
+  if [host] =~ "127.0.0.1" {
     mutate { replace => { "type" => "haproxy" } }
     grok {
-      match => { "message" => "%{HAPROXYHTTP}" }
+      match => { message => ["%{HAPROXYHTTP}"] } 
       patterns_dir => ["/opt/logstash-2.0.0/patterns"]
     }
-  }
-  date {
-    match => [ "timestamp" , "dd/MMM/yyyy:HH:mm:ss Z" ]
   }
 }
 
