Try to fix "/logs" proxy.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -33,7 +33,7 @@ frontend frontend-ssl
   mode http
   option httplog
   
-  acl webapp path_beg -i /app
+  acl webapp path_beg -i /game
   use_backend webapp	if webapp
   
   acl player path_beg -i /play
@@ -58,7 +58,7 @@ frontend frontend-plain
   mode http
   option httplog
   
-  acl webapp path_beg -i /app
+  acl webapp path_beg -i /game
   use_backend webapp	if webapp
   
   acl player path_beg -i /play
