Try a new way for the proxy.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -50,6 +50,9 @@ frontend frontend-ssl
 
   acl elk path_beg -i /logs
   use_backend elk	if elk
+
+  acl elkapp path_beg -i /app
+  use_backend elkapp	if elk
   
   default_backend website
 
@@ -73,8 +76,8 @@ frontend frontend-plain
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
 
-  acl elk path_beg -i /logs
-  use_backend elk	if elk
+  acl elkapp path_beg -i /logs
+  use_backend elkapp	if elk
   
   default_backend website
 
@@ -124,7 +127,15 @@ backend elk
 	server elk1 108.168.183.163:5601
     acl auth_ok http_auth(admins)
     http-request auth unless auth_ok
-    reqrep ^([^\ ]*\ /)logs[/]?(.*) \1\2 
+    reqrep ^([^\ ]*\ /)logs[/]?(.*) \1\2
+    
+backend elk
+	mode http
+	option httplog
+	balance roundrobin
+	server elk1 108.168.183.163:5601
+    acl auth_ok http_auth(admins)
+    http-request auth unless auth_ok
     
 listen stats *:1936
     stats enable
