I think I finally got it.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -48,12 +48,12 @@ frontend frontend-ssl
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
 
-  acl elk path_beg -i /logs
-  use_backend elk	if elk
-
   acl elkapp path_beg -i /app
-  use_backend elkapp	if elk
+  use_backend elk	if elk
   
+  acl logsurl path_beg -i /logs
+  redirect location /app/kibana	if logsurl 
+    
   default_backend website
 
 frontend frontend-plain
@@ -76,8 +76,11 @@ frontend frontend-plain
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
 
-  acl elkapp path_beg -i /logs
-  use_backend elkapp	if elk
+  acl elkapp path_beg -i /app
+  use_backend elk	if elk
+  
+  acl logsurl path_beg -i /logs
+  redirect location /app/kibana	if logsurl 
   
   default_backend website
 
@@ -119,15 +122,6 @@ backend website
     option httplog
     balance roundrobin
     server web1 108.168.183.163:8080
-    
-backend elk
-	mode http
-	option httplog
-	balance roundrobin
-	server elk1 108.168.183.163:5601
-    acl auth_ok http_auth(admins)
-    http-request auth unless auth_ok
-    reqrep ^([^\ ]*\ /)logs[/]?(.*) \1\2
     
 backend elk
 	mode http
