--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -48,7 +48,7 @@ frontend frontend-ssl
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
 
-  acl elkapp path_beg -i /app
+  acl elk path_beg -i /app
   use_backend elk	if elk
   
   acl logsurl path_beg -i /logs
