Proxy through the private net.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -48,12 +48,6 @@ frontend frontend-ssl
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
 
-  acl elk path_beg -i /app
-  use_backend elk	if elk
-  
-  acl logsurl path_beg -i /logs
-  redirect location /app/kibana	if logsurl 
-    
   default_backend website
 
 frontend frontend-plain
@@ -76,43 +70,37 @@ frontend frontend-plain
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
 
-  acl elk path_beg -i /app
-  use_backend elk	if elk
-  
-  acl logsurl path_beg -i /logs
-  redirect location /app/kibana	if logsurl 
-  
   default_backend website
 
 backend room
   mode http
   option httplog
   balance roundrobin
-  server room1 108.168.183.163:9080
+  server room1 PLACEHOLDER_HOST:9080
   
 backend concierge
   mode http
   option httplog
   balance roundrobin
-  server concierge1 108.168.183.163:9081
+  server concierge1 PLACEHOLDER_HOST:9081
 
 backend player
   mode http
   option httplog
   balance roundrobin
-  server player1 108.168.183.163:9443 ssl verify none
+  server player1 PLACEHOLDER_HOST:9443 ssl verify none
 
 backend webapp
   mode http
   option httplog
   balance roundrobin
-  server webapp1 108.168.183.163:3000
+  server webapp1 PLACEHOLDER_HOST:3000
 
 backend dockerui
   mode http
   option httplog
   balance roundrobin
-  server dockerui1 108.168.183.163:9000
+  server dockerui1 PLACEHOLDER_HOST:9000
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
   reqrep ^([^\ ]*\ /)docker[/]?(.*) \1\2 
@@ -121,15 +109,7 @@ backend website
     mode http
     option httplog
     balance roundrobin
-    server web1 108.168.183.163:8080
-    
-backend elk
-	mode http
-	option httplog
-	balance roundrobin
-	server elk1 108.168.183.163:5601
-    acl auth_ok http_auth(admins)
-    http-request auth unless auth_ok
+    server web1 PLACEHOLDER_HOST:8080
     
 listen stats *:1936
     stats enable
