Use the docker-configured hostnames.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -28,6 +28,12 @@ defaults
 	errorfile 503 /etc/haproxy/errors/503.http
 	errorfile 504 /etc/haproxy/errors/504.http
 
+frontend mongo
+  bind  *:27017
+  mode tcp
+  option tcplog
+  default_backend mongo
+  
 frontend frontend-ssl
   bind *:443 ssl crt /etc/ssl/proxy.pem
   mode http
@@ -76,31 +82,31 @@ backend room
   mode http
   option httplog
   balance roundrobin
-  server room1 PLACEHOLDER_HOST:9080
+  server room1 gameon-room:9080
   
 backend concierge
   mode http
   option httplog
   balance roundrobin
-  server concierge1 PLACEHOLDER_HOST:9081
+  server concierge1 gameon-concierge:9081
 
 backend player
   mode http
   option httplog
   balance roundrobin
-  server player1 PLACEHOLDER_HOST:9443 ssl verify none
+  server player1 gameon-player:9443 ssl verify none
 
 backend webapp
   mode http
   option httplog
   balance roundrobin
-  server webapp1 PLACEHOLDER_HOST:3000
+  server webapp1 gameon-webapp:3000
 
 backend dockerui
   mode http
   option httplog
   balance roundrobin
-  server dockerui1 PLACEHOLDER_HOST:9000
+  server dockerui1 dockerui:9000
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
   reqrep ^([^\ ]*\ /)docker[/]?(.*) \1\2 
@@ -109,8 +115,14 @@ backend website
     mode http
     option httplog
     balance roundrobin
-    server web1 PLACEHOLDER_HOST:8080
-    
+    server web1 gameon-www:8080
+
+backend mongo
+  mode tcp
+  option tcplog
+  balance roundrobin
+  server mongo1 player-mongo:27017
+  
 listen stats *:1936
     stats enable
     stats uri /
