--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -34,6 +34,12 @@ frontend mongo
   option tcplog
   default_backend mongo
   
+frontend elasticsearch
+  bind *:9200
+  mode tcp
+  option tcplog
+  default_backend elasticsearch
+  
 frontend frontend-ssl
   bind *:443 ssl crt /etc/ssl/proxy.pem
   mode http
@@ -122,6 +128,12 @@ backend mongo
   option tcplog
   balance roundrobin
   server mongo1 player-mongo:27017
+
+backend elasticsearch
+  mode tcp
+  option tcplog
+  balance roundrobin
+  server es1 elk:9200
   
 listen stats *:1936
     stats enable
