Wrong address for ES backend.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -133,7 +133,7 @@ backend elasticsearch
   mode tcp
   option tcplog
   balance roundrobin
-  server es1 elk:9200
+  server es1 gameon-elk:9200
   
 listen stats *:1936
     stats enable
