--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -88,31 +88,31 @@ backend room
   mode http
   option httplog
   balance roundrobin
-  server room1 gameon-room:9080
+  server room1 gameon-room:9080 check
   
 backend concierge
   mode http
   option httplog
   balance roundrobin
-  server concierge1 gameon-concierge:9081
+  server concierge1 gameon-concierge:9081 check
 
 backend player
   mode http
   option httplog
   balance roundrobin
-  server player1 gameon-player:9443 ssl verify none
+  server player1 gameon-player:9443 ssl verify none 
 
 backend webapp
   mode http
   option httplog
   balance roundrobin
-  server webapp1 gameon-webapp:3000
+  server webapp1 gameon-webapp:3000 check
 
 backend dockerui
   mode http
   option httplog
   balance roundrobin
-  server dockerui1 dockerui:9000
+  server dockerui1 dockerui:9000 check
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
   reqrep ^([^\ ]*\ /)docker[/]?(.*) \1\2 
@@ -121,13 +121,13 @@ backend website
     mode http
     option httplog
     balance roundrobin
-    server web1 gameon-www:80
+    server web1 gameon-www:80 check
 
 backend mongo
   mode tcp
   option tcplog
   balance roundrobin
-  server mongo1 player-mongo:27017
+  server mongo1 player-mongo:27017 check
 
 backend elasticsearch
   mode tcp
