Smarter HA rules.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -6,6 +6,8 @@ global
 	stats timeout 30s
 	user haproxy
 	group haproxy
+	retries 3
+	option redispatch
 	daemon
 
 	ssl-default-bind-ciphers kEECDH+aRSA+AES:kRSA+AES:+AES256:RC4-SHA:!kEDH:!LOW:!EXP:!MD5:!aNULL:!eNULL
@@ -87,12 +89,14 @@ frontend frontend-plain
 backend room
   mode http
   option httplog
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
   server room1 gameon-room:9080 check
   
 backend concierge
   mode http
   option httplog
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
   server concierge1 gameon-concierge:9081 check
 
@@ -104,6 +108,7 @@ backend player
 
 backend webapp
   mode http
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   option httplog
   balance roundrobin
   server webapp1 gameon-webapp:3000 check
@@ -111,6 +116,7 @@ backend webapp
 backend dockerui
   mode http
   option httplog
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
   server dockerui1 dockerui:9000 check
   acl auth_ok http_auth(admins)
@@ -118,10 +124,11 @@ backend dockerui
   reqrep ^([^\ ]*\ /)docker[/]?(.*) \1\2 
 	
 backend website
-    mode http
-    option httplog
-    balance roundrobin
-    server web1 gameon-www:80 check
+  mode http
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  option httplog
+  balance roundrobin
+  server web1 gameon-www:80 check
 
 backend mongo
   mode tcp
@@ -133,7 +140,7 @@ backend elasticsearch
   mode tcp
   option tcplog
   balance roundrobin
-  server es1 gameon-elk:9200
+  server es1 gameon-elk:9200 check
   
 listen stats *:1936
     stats enable
