That one thing that has to be checked in the right way or it won't work.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -108,7 +108,7 @@ backend player
 
 backend webapp
   mode http
-  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  option httpchk HEAD /game HTTP/1.1\r\nHost:localhost
   option httplog
   balance roundrobin
   server webapp1 gameon-webapp:3000 check
