Mongo can be checked via HTTP too.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -131,11 +131,13 @@ backend website
   server web1 gameon-www:80 check
 
 backend mongo
-  mode tcp
+  mode http
+  option httplog
   option tcplog
   balance roundrobin
   server mongo1 player-mongo:27017 check
-
+  httpchk GET / HTTP/1.1\r\nHost:localhost
+  
 backend elasticsearch
   mode tcp
   option tcplog
