--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -133,10 +133,9 @@ backend website
 backend mongo
   mode http
   option httplog
-  option tcplog
+  option httpchk GET / HTTP/1.1\r\nHost:localhost
   balance roundrobin
   server mongo1 player-mongo:27017 check
-  httpchk GET / HTTP/1.1\r\nHost:localhost
   
 backend elasticsearch
   mode tcp
