MMK, they can't be checked via TCP

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -131,9 +131,8 @@ backend website
   server web1 gameon-www:80 check
 
 backend mongo
-  mode http
-  option httplog
-  option httpchk GET / HTTP/1.1\r\nHost:localhost
+  mode tcp
+  option tcplog
   balance roundrobin
   server mongo1 player-mongo:27017 check
   
