Check mongo based on tcp settings.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -133,6 +133,10 @@ backend website
 backend mongo
   mode tcp
   option tcplog
+  option tcp-check
+  tcp-check connect
+  tcp-check send GET\ /\ HTTP/1.0\r\n
+  tcp-expect rstring It.*
   balance roundrobin
   server mongo1 player-mongo:27017 check
   
