--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -91,34 +91,34 @@ backend room
   option httplog
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server room1 gameon-room:9080 check
+  server room1 PLACEHOLDER_DOCKERHOST:9080 check
   
 backend concierge
   mode http
   option httplog
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server concierge1 gameon-concierge:9081 check
+  server concierge1 PLACEHOLDER_DOCKERHOST:9081 check
 
 backend player
   mode http
   option httplog
   balance roundrobin
-  server player1 gameon-player:9443 ssl verify none 
+  server player1 PLACEHOLDER_DOCKERHOST:9443 ssl verify none 
 
 backend webapp
   mode http
   option httpchk HEAD /game HTTP/1.1\r\nHost:localhost
   option httplog
   balance roundrobin
-  server webapp1 gameon-webapp:3000 check
+  server webapp1 PLACEHOLDER_DOCKERHOST:3000 check
 
 backend dockerui
   mode http
   option httplog
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server dockerui1 dockerui:9000 check
+  server dockerui1 PLACEHOLDER_DOCKERHOST:9000 check
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
   reqrep ^([^\ ]*\ /)docker[/]?(.*) \1\2 
@@ -128,7 +128,7 @@ backend website
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   option httplog
   balance roundrobin
-  server web1 gameon-www:80 check
+  server web1 PLACEHOLDER_DOCKERHOST:80 check
 
 backend mongo
   mode tcp
@@ -138,13 +138,13 @@ backend mongo
   tcp-check send GET\ /\ HTTP/1.0\r\n
   tcp-expect rstring It.*
   balance roundrobin
-  server mongo1 player-mongo:27017 check
+  server mongo1 PLACEHOLDER_DOCKERHOST:27017 check
   
 backend elasticsearch
   mode tcp
   option tcplog
   balance roundrobin
-  server es1 gameon-elk:9200 check
+  server es1 PLACEHOLDER_DOCKERHOST:9200 check
   
 listen stats *:1936
     stats enable
