--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -136,7 +136,7 @@ backend mongo
   option tcp-check
   tcp-check connect
   tcp-check send GET\ /\ HTTP/1.0\r\n
-  tcp-expect rstring It.*
+  tcp-check expect rstring It.*
   balance roundrobin
   server mongo1 PLACEHOLDER_DOCKERHOST:27017 check
   
