Give it a whirl.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -6,6 +6,7 @@ global
 	stats timeout 30s
 	user haproxy
 	group haproxy
+	daemon
 
 	ssl-default-bind-ciphers kEECDH+aRSA+AES:kRSA+AES:+AES256:RC4-SHA:!kEDH:!LOW:!EXP:!MD5:!aNULL:!eNULL
 
