--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,6 +1,6 @@
 global
-	log 127.0.0.1	local0
-	log 127.0.0.1	local1 notice
+	log PLACEHOLDER_LOGHOST	local0
+	log PLACEHOLDER_LOGHOST	local1 notice
 	chroot /var/lib/haproxy
 	stats socket /run/haproxy/admin.sock mode 660 level admin
 	stats timeout 30s
