Add a frontend for logstash lumberjack (so we can load balance logstashes in future)

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -34,6 +34,12 @@ frontend mongo
   mode tcp
   option tcplog
   default_backend mongo
+
+frontend logstash-lumberjack
+  bind *:5043
+  mode tcp
+  option tcplog
+  default_backend logstash-lumberjack
   
 frontend frontend-ssl
   bind *:443 ssl crt /etc/ssl/proxy.pem
@@ -128,7 +134,13 @@ backend mongo
   option tcplog
   balance roundrobin
   server mongo1 PLACEHOLDER_DOCKERHOST:27017 check
-  
+    
+backend logstash-lumberjack
+  mode tcp
+  option tcplog
+  balance roundrobin
+  server logstash1 PLACEHOLDER_DOCKERHOST:5043 check
+
 listen stats *:1936
     stats enable
     stats uri /
