Proxy to the Node.js room.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -60,6 +60,9 @@ frontend frontend-ssl
   
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
+  
+  acl roomjs	path_beg -i /roomjs
+  use_backend	roomjs	if roomjs
 
   default_backend website
 
@@ -91,6 +94,12 @@ backend room
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
   server room1 PLACEHOLDER_DOCKERHOST:9080 check
+  
+backend roomjs
+  mode http
+  option httplog
+  balance roundrobin
+  server room1 PLACEHOLDER_DOCKERHOST:5000 check
   
 backend concierge
   mode http
