Add repository endpoint and make it so things that require HTTP basic auth are only accessible over HTTPS.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -54,9 +54,12 @@ frontend frontend-ssl
   
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
+
+  acl room	 path_beg -i /rooms
+  use_backend room		if room
   
-  acl dockerui path_beg -i /docker
-  use_backend dockerui	if dockerui
+  acl roomjs	path_beg -i /roomjs
+  use_backend	roomjs	if roomjs
   
   default_backend website
 
@@ -74,14 +77,17 @@ frontend frontend-plain
   acl room	 path_beg -i /rooms
   use_backend room		if room
   
+  acl roomjs	path_beg -i /roomjs
+  use_backend	roomjs	if roomjs
+  
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
   
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
   
-  acl roomjs	path_beg -i /roomjs
-  use_backend	roomjs	if roomjs
+  acl repository	path_beg -i /repository
+  use_backend		repository if repository
 
   default_backend website
 
@@ -127,6 +133,16 @@ backend dockerui
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
   reqrep ^([^\ ]*\ /)docker[/]?(.*) \1\2 
+  
+backend repository
+  mode http
+  option httplog
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  balance roundrobin
+  server repository1 PLACEHOLDER_DOCKERHOST:8081 check
+  acl auth_ok http_auth(admins)
+  http-request auth unless auth_ok
+  reqrep ^([^\ ]*\ /)repository[/]?(.*) \1\2 
 	
 backend website
   mode http
