--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -46,9 +46,6 @@ frontend frontend-ssl
   mode http
   option httplog
   
-  acl webapp path_beg -i /game
-  use_backend webapp	if webapp
-  
   acl player path_beg -i /play
   use_backend player	if player
   
@@ -64,15 +61,12 @@ frontend frontend-ssl
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
   
-  default_backend website
+  default_backend static-content
 
 frontend frontend-plain
   bind *:80
   mode http
   option httplog
-  
-  acl webapp path_beg -i /game
-  use_backend webapp	if webapp
   
   acl player path_beg -i /play
   use_backend player	if player
@@ -86,7 +80,7 @@ frontend frontend-plain
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
   
-  default_backend website
+  default_backend static-content
 
 backend room
   mode http
@@ -114,7 +108,7 @@ backend player
   balance roundrobin
   server player1 PLACEHOLDER_DOCKERHOST:9443 ssl verify none 
 
-backend webapp
+backend static-content
   mode http
   option httpchk HEAD /game HTTP/1.1\r\nHost:localhost
   option httplog
@@ -130,13 +124,6 @@ backend dockerui
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
   reqrep ^([^\ ]*\ /)docker[/]?(.*) \1\2 
-	
-backend website
-  mode http
-  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  option httplog
-  balance roundrobin
-  server web1 PLACEHOLDER_DOCKERHOST:8080 check
 
 backend mongo
   mode tcp
