Change how we're checking the head

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -110,7 +110,7 @@ backend player
 
 backend static-content
   mode http
-  option httpchk HEAD /game HTTP/1.1\r\nHost:localhost
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   option httplog
   balance roundrobin
   server webapp1 PLACEHOLDER_DOCKERHOST:3000 check
