Add an endpoint for the docs.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -49,6 +49,9 @@ frontend frontend-ssl
   acl player path_beg -i /play
   use_backend player	if player
   
+  acl docs path_beg -i /docs
+  use_backend gitbook if docs
+  
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
 
@@ -67,6 +70,9 @@ frontend frontend-plain
   bind *:80
   mode http
   option httplog
+  
+  acl docs path_beg -i /docs
+  use_backend gitbook if docs
   
   acl player path_beg -i /play
   use_backend player	if player
@@ -114,6 +120,13 @@ backend static-content
   option httplog
   balance roundrobin
   server webapp1 PLACEHOLDER_DOCKERHOST:8080 check
+  
+backend gitbook
+  mode http
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  option httplog
+  balance roundrobin
+  server gitbook1 PLACEHOLDER_DOCKERHOST:4000 check
 
 backend dockerui
   mode http
