Rewrite the URL.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -126,6 +126,8 @@ backend gitbook
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   option httplog
   balance roundrobin
+  http-request auth unless auth_ok
+  reqrep ^([^\ ]*\ /)docs[/]?(.*) \1\2 
   server gitbook1 PLACEHOLDER_DOCKERHOST:4000 check
 
 backend dockerui
