Add Swagger endpoint.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -55,6 +55,9 @@ frontend frontend-ssl
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
 
+  acl swagger	 path_beg -i /swagger
+  use_backend swagger		if swagger
+
   acl room	 path_beg -i /rooms
   use_backend room		if room
   
@@ -79,6 +82,9 @@ frontend frontend-plain
   
   acl room	 path_beg -i /rooms
   use_backend room		if room
+  
+  acl swagger	 path_beg -i /swagger
+  use_backend swagger		if swagger
   
   acl roomjs	path_beg -i /roomjs
   use_backend	roomjs	if roomjs
@@ -150,6 +156,13 @@ backend logstash-lumberjack
   option tcplog
   balance roundrobin
   server logstash1 PLACEHOLDER_DOCKERHOST:5043 check
+  
+backend swagger
+  mode http
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  option httplog
+  balance roundrobin
+  server swagger1 PLACEHOLDER_DOCKERHOST:8081 check
 
 listen stats *:1936
     stats enable
