--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -159,7 +159,7 @@ backend logstash-lumberjack
   
 backend swagger
   mode http
-  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  option httpchk HEAD /swagger/ HTTP/1.1\r\nHost:localhost
   option httplog
   balance roundrobin
   server swagger1 PLACEHOLDER_DOCKERHOST:8081 check
