Wrap the stats endpoint in SSL.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -164,7 +164,8 @@ backend swagger
   balance roundrobin
   server swagger1 PLACEHOLDER_DOCKERHOST:8081 check
 
-listen stats *:1936
+listen stats 
+    bind *:1936 ssl crt /etc/ssl/proxy.pem
     stats enable
     stats uri /
     stats hide-version
