Sometimes you can get through on that facility, sometimes not, apparently.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,6 +1,5 @@
 global
-	log PLACEHOLDER_LOGHOST	local0
-	log PLACEHOLDER_LOGHOST	local1 notice alert warning error
+	log PLACEHOLDER_LOGHOST	local1 info emerg
 	chroot /var/lib/haproxy
 	stats socket /run/haproxy/admin.sock mode 660 level admin
 	stats timeout 30s
