--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,5 +1,5 @@
 global
-	log PLACEHOLDER_LOGHOST	local1 info emerg
+	log PLACEHOLDER_LOGHOST	syslog
 	chroot /var/lib/haproxy
 	stats socket /run/haproxy/admin.sock mode 660 level admin
 	stats timeout 30s
