Provide mapping to newly-created mediator service.

--- a/haproxy-nolog.cfg
+++ b/haproxy-nolog.cfg
@@ -65,6 +65,9 @@ frontend frontend-ssl
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
   
+  acl mediator path_bet -i /mediator
+  use_backend mediator  if mediator
+  
   default_backend static-content
 
 frontend frontend-plain
@@ -89,6 +92,9 @@ frontend frontend-plain
   
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
+  
+  acl mediator path_bet -i /mediator
+  use_backend mediator  if mediator
   
   default_backend static-content
 
@@ -161,6 +167,12 @@ backend swagger
   option httplog
   balance roundrobin
   server swagger1 PLACEHOLDER_DOCKERHOST:8081 check
+
+backend mediator
+  mode http
+  option httplog
+  balance roundrobin
+  server mediator1 PLACEHOLDER_DOCKERHOST:9446 ssl verify none 
 
 listen stats 
     bind *:1936 ssl crt /etc/ssl/proxy.pem
