--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -66,6 +66,9 @@ frontend frontend-ssl
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
   
+  acl mediator path_bet -i /mediator
+  use_backend mediator  if mediator
+  
   default_backend static-content
 
 frontend frontend-plain
@@ -91,6 +94,9 @@ frontend frontend-plain
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
   
+  acl mediator path_bet -i /mediator
+  use_backend mediator  if mediator
+  
   default_backend static-content
 
 backend room
@@ -112,6 +118,12 @@ backend concierge
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
   server concierge1 PLACEHOLDER_DOCKERHOST:9081 check
+
+backend mediator
+  mode http
+  option httplog
+  balance roundrobin
+  server mediator1 PLACEHOLDER_DOCKERHOST:9446 ssl verify none 
 
 backend player
   mode http
