--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -94,7 +94,7 @@ frontend frontend-plain
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
   
-  acl mediator path_bet -i /mediator
+  acl mediator path_beg -i /mediator
   use_backend mediator  if mediator
   
   default_backend static-content
