Even MORE typos.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -66,7 +66,7 @@ frontend frontend-ssl
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
   
-  acl mediator path_bet -i /mediator
+  acl mediator path_beg -i /mediator
   use_backend mediator  if mediator
   
   default_backend static-content
