--- a/haproxy-nolog.cfg
+++ b/haproxy-nolog.cfg
@@ -93,7 +93,7 @@ frontend frontend-plain
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
   
-  acl mediator path_bet -i /mediator
+  acl mediator path_beg -i /mediator
   use_backend mediator  if mediator
   
   default_backend static-content
