Test http over ssl/tls backend checking using option ssl-hell-chk

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -128,8 +128,10 @@ backend mediator
 backend player
   mode http
   option httplog
+  option ssl-hello-chk
+  option log-health-checks
   balance roundrobin
-  server player1 PLACEHOLDER_DOCKERHOST:9443 ssl verify none 
+  server player1 PLACEHOLDER_DOCKERHOST:9443 check 
 
 backend static-content
   mode http
