--- a/haproxy-nolog.cfg
+++ b/haproxy-nolog.cfg
@@ -38,18 +38,18 @@ frontend logstash-lumberjack
   mode tcp
   option tcplog
   default_backend logstash-lumberjack
-  
+
 frontend frontend-ssl
   bind *:443 ssl crt /etc/ssl/proxy.pem
   mode http
   option httplog
-  
+
   acl player path_beg -i /play
   use_backend player	if player
-  
+
   acl docs path_beg -i /docs
   use_backend gitbook if docs
-  
+
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
 
@@ -58,38 +58,44 @@ frontend frontend-ssl
 
   acl room	 path_beg -i /rooms
   use_backend room		if room
-  
+
   acl roomjs	path_beg -i /roomjs
   use_backend	roomjs	if roomjs
-  
+
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
-  
+
+  acl mediator path_beg -i /mediator
+  use_backend mediator  if mediator
+
   default_backend static-content
 
 frontend frontend-plain
   bind *:80
   mode http
   option httplog
-  
+
   acl docs path_beg -i /docs
   use_backend gitbook if docs
-  
+
   acl player path_beg -i /play
   use_backend player	if player
-  
+
   acl room	 path_beg -i /rooms
   use_backend room		if room
-  
+
   acl swagger	 path_beg -i /swagger
   use_backend swagger		if swagger
-  
+
   acl roomjs	path_beg -i /roomjs
   use_backend	roomjs	if roomjs
-  
+
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
-  
+
+  acl mediator path_beg -i /mediator
+  use_backend mediator  if mediator
+
   default_backend static-content
 
 backend room
@@ -97,40 +103,40 @@ backend room
   option httplog
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server room1 PLACEHOLDER_DOCKERHOST:9080 check
-  
+  server room1 room:9080 check
+
 backend roomjs
   mode http
   option httplog
   balance roundrobin
-  server room1 PLACEHOLDER_DOCKERHOST:5000 check
-  
+  server roomjs1 PLACEHOLDER_DOCKERHOST:5000 check
+
 backend concierge
   mode http
   option httplog
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server concierge1 PLACEHOLDER_DOCKERHOST:9081 check
+  server concierge1 concierge:9081 check
 
 backend player
   mode http
   option httplog
   balance roundrobin
-  server player1 PLACEHOLDER_DOCKERHOST:9443 ssl verify none 
+  server player1 player:9443 ssl verify none
 
 backend static-content
   mode http
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   option httplog
   balance roundrobin
-  server webapp1 PLACEHOLDER_DOCKERHOST:8080 check
-  
+  server webapp1 webapp:8080 check inter 1m
+
 backend gitbook
   mode http
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   option httplog
   balance roundrobin
-  reqrep ^([^\ ]*\ /)docs[/]?(.*) \1\2 
+  reqrep ^([^\ ]*\ /)docs[/]?(.*) \1\2
   server gitbook1 PLACEHOLDER_DOCKERHOST:4000 check
 
 backend dockerui
@@ -141,20 +147,20 @@ backend dockerui
   server dockerui1 PLACEHOLDER_DOCKERHOST:9000 check
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
-  reqrep ^([^\ ]*\ /)docker[/]?(.*) \1\2 
+  reqrep ^([^\ ]*\ /)docker[/]?(.*) \1\2
 
 backend mongo
   mode tcp
   option tcplog
   balance roundrobin
   server mongo1 PLACEHOLDER_DOCKERHOST:27017 check
-    
+
 backend logstash-lumberjack
   mode tcp
   option tcplog
   balance roundrobin
   server logstash1 PLACEHOLDER_DOCKERHOST:5043 check
-  
+
 backend swagger
   mode http
   option httpchk HEAD /swagger/ HTTP/1.1\r\nHost:localhost
@@ -162,7 +168,13 @@ backend swagger
   balance roundrobin
   server swagger1 PLACEHOLDER_DOCKERHOST:8081 check
 
-listen stats 
+backend mediator
+  mode http
+  option httplog
+  balance roundrobin
+  server mediator1 PLACEHOLDER_DOCKERHOST:9446 ssl verify none
+
+listen stats
     bind *:1936 ssl crt /etc/ssl/proxy.pem
     stats enable
     stats uri /
