Just use a standard-old httpchk with check-ssl directive.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -41,7 +41,7 @@ frontend logstash-lumberjack
   default_backend logstash-lumberjack
   
 frontend frontend-ssl
-  bind *:443 ssl crt /etc/ssl/proxy.pem
+  bind *:443 ssl crt /etc/ssl/proxy.pem no-sslv3
   mode http
   option httplog
   
@@ -128,10 +128,10 @@ backend mediator
 backend player
   mode http
   option httplog
-  option ssl-hello-chk
+  option httpchk HEAD /player HTTP/1.1\r\nHost:localhost
   option log-health-checks
   balance roundrobin
-  server player1 PLACEHOLDER_DOCKERHOST:9443 check 
+  server player1 PLACEHOLDER_DOCKERHOST:9443 check check-ssl 
 
 backend static-content
   mode http
