Try that once more.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -131,7 +131,7 @@ backend player
   option httpchk HEAD /player HTTP/1.1\r\nHost:localhost
   option log-health-checks
   balance roundrobin
-  server player1 PLACEHOLDER_DOCKERHOST:9443 check check-ssl 
+  server player1 PLACEHOLDER_DOCKERHOST:9443 check check-ssl verify none
 
 backend static-content
   mode http
