--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -128,7 +128,7 @@ backend mediator
 backend player
   mode http
   option httplog
-  option httpchk HEAD /player HTTP/1.1\r\nHost:localhost
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   option log-health-checks
   balance roundrobin
   server player1 PLACEHOLDER_DOCKERHOST:9443 check check-ssl verify none
