Make https checks for all https-required backend connections to Liberty servers.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -122,8 +122,9 @@ backend concierge
 backend mediator
   mode http
   option httplog
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server mediator1 PLACEHOLDER_DOCKERHOST:9446 ssl verify none 
+  server mediator1 PLACEHOLDER_DOCKERHOST:9446 check check-ssl verify none
 
 backend player
   mode http
