--- a/haproxy-nolog.cfg
+++ b/haproxy-nolog.cfg
@@ -118,11 +118,20 @@ backend concierge
   balance roundrobin
   server concierge1 PLACEHOLDER_DOCKERHOST:9081 check
 
+backend mediator
+  mode http
+  option httplog
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  balance roundrobin
+  server mediator1 PLACEHOLDER_DOCKERHOST:9446 check check-ssl verify none
+
 backend player
   mode http
   option httplog
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  option log-health-checks
   balance roundrobin
-  server player1 PLACEHOLDER_DOCKERHOST:9443 ssl verify none 
+  server player1 PLACEHOLDER_DOCKERHOST:9443 check check-ssl verify none
 
 backend static-content
   mode http
