Put it back for now.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -122,17 +122,19 @@ backend concierge
 backend mediator
   mode http
   option httplog
-  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  #option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server mediator1 PLACEHOLDER_DOCKERHOST:9446 check check-ssl verify none
+  server mediator1 PLACEHOLDER_DOCKERHOST:9446
+
+#check check-ssl verify none
 
 backend player
   mode http
   option httplog
-  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  #option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   option log-health-checks
   balance roundrobin
-  server player1 PLACEHOLDER_DOCKERHOST:9443 check check-ssl verify none
+  server player1 PLACEHOLDER_DOCKERHOST:9443 
 
 backend static-content
   mode http
