--- a/haproxy-nolog.cfg
+++ b/haproxy-nolog.cfg
@@ -123,7 +123,7 @@ backend mediator
   option httplog
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server mediator1 PLACEHOLDER_DOCKERHOST:9446 check check-ssl verify none
+  server mediator1 PLACEHOLDER_DOCKERHOST:9446  ssl verify none
 
 backend player
   mode http
@@ -131,7 +131,7 @@ backend player
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   option log-health-checks
   balance roundrobin
-  server player1 PLACEHOLDER_DOCKERHOST:9443 check check-ssl verify none
+  server player1 PLACEHOLDER_DOCKERHOST:9443 ssl verify none
 
 backend static-content
   mode http
