--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -124,7 +124,7 @@ backend mediator
   option httplog
   #option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server mediator1 PLACEHOLDER_DOCKERHOST:9446
+  server mediator1 PLACEHOLDER_DOCKERHOST:9446 ssl verify none
 
 #check check-ssl verify none
 
@@ -134,7 +134,7 @@ backend player
   #option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   option log-health-checks
   balance roundrobin
-  server player1 PLACEHOLDER_DOCKERHOST:9443 
+  server player1 PLACEHOLDER_DOCKERHOST:9443  ssl verify none
 
 backend static-content
   mode http
