--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -131,10 +131,8 @@ backend mediator
 backend player
   mode http
   option httplog
-  #option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-  option log-health-checks
   balance roundrobin
-  server player1 PLACEHOLDER_DOCKERHOST:9443  ssl verify none
+  server player1 PLACEHOLDER_DOCKERHOST:9443 ssl check check-ssl verify none
 
 backend static-content
   mode http
