Put that up for mediator too, as that should be working.

--- a/haproxy-nolog.cfg
+++ b/haproxy-nolog.cfg
@@ -121,7 +121,7 @@ backend mediator
   mode http
   option httplog
   balance roundrobin
-  server mediator1 PLACEHOLDER_DOCKERHOST:9446  ssl verify none
+  server mediator1 PLACEHOLDER_DOCKERHOST:9446 ssl check check-ssl verify none
 
 backend player
   mode http
