--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -122,9 +122,8 @@ backend concierge
 backend mediator
   mode http
   option httplog
-  #option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server mediator1 PLACEHOLDER_DOCKERHOST:9446 ssl verify none
+  server mediator1 PLACEHOLDER_DOCKERHOST:9446 ssl check check-ssl verify none
 
 #check check-ssl verify none
 
