--- a/haproxy-dev.cfg
+++ b/haproxy-dev.cfg
@@ -108,7 +108,7 @@ backend roomjs
   mode http
   option httplog
   balance roundrobin
-  server roomjs1 PLACEHOLDER_DOCKERHOST:5000 check
+  server roomjs1 192.168.99.100:5000 check
 
 backend concierge
   mode http
@@ -121,7 +121,7 @@ backend mediator
   mode http
   option httplog
   balance roundrobin
-  server mediator1 PLACEHOLDER_DOCKERHOST:9446 ssl check check-ssl verify none
+  server mediator1 192.168.99.100:9446 ssl check check-ssl verify none
 
 backend player
   mode http
@@ -142,7 +142,7 @@ backend gitbook
   option httplog
   balance roundrobin
   reqrep ^([^\ ]*\ /)docs[/]?(.*) \1\2
-  server gitbook1 PLACEHOLDER_DOCKERHOST:4000 check
+  server gitbook1 192.168.99.100:4000 check
 
 backend dockerui
   mode http
@@ -158,20 +158,20 @@ backend mongo
   mode tcp
   option tcplog
   balance roundrobin
-  server mongo1 PLACEHOLDER_DOCKERHOST:27017 check
+  server mongo1 192.168.99.100:27017 check
 
 backend logstash-lumberjack
   mode tcp
   option tcplog
   balance roundrobin
-  server logstash1 PLACEHOLDER_DOCKERHOST:5043 check
+  server logstash1 192.168.99.100:5043 check
 
 backend swagger
   mode http
   option httpchk HEAD /swagger/ HTTP/1.1\r\nHost:localhost
   option httplog
   balance roundrobin
-  server swagger1 PLACEHOLDER_DOCKERHOST:8081 check
+  server swagger1 192.168.99.100:8081 check
 
 listen stats 
     bind *:1936 ssl crt /etc/ssl/proxy.pem
