--- a/haproxy-dev.cfg
+++ b/haproxy-dev.cfg
@@ -149,7 +149,7 @@ backend dockerui
   option httplog
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server dockerui1 PLACEHOLDER_DOCKERHOST:9000 check
+  server dockerui1 192.168.99.100:9000 check
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
   reqrep ^([^\ ]*\ /)docker[/]?(.*) \1\2
