No more plain http access; it all gets redirect.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -72,26 +72,7 @@ frontend frontend-plain
   bind *:80
   mode http
   option httplog
-  
-  acl player path_beg -i /play
-  use_backend player	if player
-  
-  acl room	 path_beg -i /rooms
-  use_backend room		if room
-  
-  acl swagger	 path_beg -i /swagger
-  use_backend swagger		if swagger
-  
-  acl roomjs	path_beg -i /roomjs
-  use_backend	roomjs	if roomjs
-  
-  acl concierge path_beg -i /concierge
-  use_backend concierge if concierge
-  
-  acl mediator path_beg -i /mediator
-  use_backend mediator  if mediator
-  
-  default_backend static-content
+  redirect scheme https code 301 if !{ ssl_fc }
 
 backend room
   mode http
