Add an endpoint for etcd

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -45,6 +45,9 @@ frontend frontend-ssl
   mode http
   option httplog
   
+  acl etcd path_beg -i /etcd
+  use_backend etcd	if etcd
+  
   acl player path_beg -i /play
   use_backend player	if player
   
@@ -100,8 +103,6 @@ backend mediator
   balance roundrobin
   server mediator1 PLACEHOLDER_DOCKERHOST:9446 ssl check check-ssl verify none
 
-#check check-ssl verify none
-
 backend player
   mode http
   option httplog
@@ -114,7 +115,17 @@ backend static-content
   option httplog
   balance roundrobin
   server webapp1 PLACEHOLDER_DOCKERHOST:8080 check
-  
+
+backend etcd
+  mode http
+  option httplog
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  balance roundrobin
+  server etcd1 PLACEHOLDER_DOCKERHOST:4001 check
+  acl auth_ok http_auth(admins)
+  http-request auth unless auth_ok
+  reqrep ^([^\ ]*\ /)etcd[/]?(.*) \1\2 
+
 backend dockerui
   mode http
   option httplog
