--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -40,13 +40,16 @@ frontend logstash-lumberjack
   option tcplog
   default_backend logstash-lumberjack
   
+frontend etcd
+  bind *:4002 ssl crt /etc/ssl/proxy.pem no-sslv3
+  mode tcp
+  option tcplog
+  default_backend etcd
+  
 frontend frontend-ssl
   bind *:443 ssl crt /etc/ssl/proxy.pem no-sslv3
   mode http
   option httplog
-  
-  acl etcd path_beg -i /etcd
-  use_backend etcd	if etcd
   
   acl player path_beg -i /play
   use_backend player	if player
@@ -124,7 +127,6 @@ backend etcd
   server etcd1 PLACEHOLDER_DOCKERHOST:4001 check
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
-  reqrep ^([^\ ]*\ /)etcd[/]?(.*) \1\2 
 
 backend dockerui
   mode http
