Use the correct httpchk path

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -122,7 +122,7 @@ backend static-content
 backend etcd
   mode http
   option httplog
-  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  option httpchk HEAD /v2/keys HTTP/1.1\r\nHost:localhost
   balance roundrobin
   server etcd1 PLACEHOLDER_DOCKERHOST:4001 check
   acl auth_ok http_auth(admins)
