No longer user port 4002 and instead host etcd viewer there.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -63,6 +63,9 @@ frontend frontend-ssl
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
   
+  acl etcd path_beg -i /etcd
+  use_backend etcd	if etcd
+  
   acl mediator path_beg -i /mediator
   use_backend mediator  if mediator
   
@@ -122,6 +125,16 @@ backend dockerui
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
   reqrep ^([^\ ]*\ /)docker[/]?(.*) \1\2 
+  
+backend etcdviewer
+  mode http
+  option httplog
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  balance roundrobin
+  server etcdviewer1 PLACEHOLDER_DOCKERHOST:4002 check
+  acl auth_ok http_auth(admins)
+  http-request auth unless auth_ok
+  reqrep ^([^\ ]*\ /)etcd[/]?(.*) \1\2 
 
 backend mongo
   mode tcp
