Wrong backend name.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -64,7 +64,7 @@ frontend frontend-ssl
   use_backend dockerui	if dockerui
   
   acl etcd path_beg -i /etcd
-  use_backend etcd	if etcd
+  use_backend etcdviewer	if etcd
   
   acl mediator path_beg -i /mediator
   use_backend mediator  if mediator
