Try a different starting path.

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -63,8 +63,8 @@ frontend frontend-ssl
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
   
-  acl etcd path_beg -i /etcd
-  use_backend etcdviewer	if etcd
+  acl etcd path_beg -i /etcdview
+  use_backend etcdview	if etcd
   
   acl mediator path_beg -i /mediator
   use_backend mediator  if mediator
@@ -134,7 +134,7 @@ backend etcdviewer
   server etcdviewer1 PLACEHOLDER_DOCKERHOST:4002 check
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
-  reqrep ^([^\ ]*\ /)etcd[/]?(.*) \1\2 
+  reqrep ^([^\ ]*\ /)etcdview[/]?(.*) \1\2 
 
 backend mongo
   mode tcp
