--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -126,7 +126,7 @@ backend dockerui
   http-request auth unless auth_ok
   reqrep ^([^\ ]*\ /)docker[/]?(.*) \1\2 
   
-backend etcdviewer
+backend etcdview
   mode http
   option httplog
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
