--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -40,6 +40,12 @@ frontend logstash-lumberjack
   option tcplog
   default_backend logstash-lumberjack
   
+frontend etcd-viewer-ssl
+  bind *:9001 ssl crt /etc/ssl/proxy.pem no-sslv3
+  mode http
+  option httplog
+  default_backend etcdviewer
+  
 frontend frontend-ssl
   bind *:443 ssl crt /etc/ssl/proxy.pem no-sslv3
   mode http
@@ -62,9 +68,6 @@ frontend frontend-ssl
   
   acl dockerui path_beg -i /docker
   use_backend dockerui	if dockerui
-  
-  acl etcd path_beg -i /etcdview
-  use_backend etcdview	if etcd
   
   acl mediator path_beg -i /mediator
   use_backend mediator  if mediator
@@ -126,7 +129,7 @@ backend dockerui
   http-request auth unless auth_ok
   reqrep ^([^\ ]*\ /)docker[/]?(.*) \1\2 
   
-backend etcdview
+backend etcdviewer
   mode http
   option httplog
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
@@ -134,7 +137,6 @@ backend etcdview
   server etcdviewer1 PLACEHOLDER_DOCKERHOST:4002 check
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
-  reqrep ^([^\ ]*\ /)etcdview[/]?(.*) \1\2 
 
 backend mongo
   mode tcp
