Add the x-forwarded-proto header to etcdviewer requests..

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -42,7 +42,7 @@ frontend logstash-lumberjack
   
 frontend etcd-viewer-ssl
   bind *:9001 ssl crt /etc/ssl/proxy.pem no-sslv3
-  redirect scheme https code 301 if !{ ssl_fc }
+  reqadd X-Forwarded-Proto:\ https
   mode http
   option httplog
   default_backend etcdviewer
