--- a/haproxy-dev.cfg
+++ b/haproxy-dev.cfg
@@ -1,36 +1,30 @@
 global
-	chroot /var/lib/haproxy
-	stats socket /run/haproxy/admin.sock mode 660 level admin
-	stats timeout 30s
-	user haproxy
-	group haproxy
+  chroot /var/lib/haproxy
+  stats socket /run/haproxy/admin.sock mode 660 level admin
+  stats timeout 30s
+  user haproxy
+  group haproxy
 
-	ssl-default-bind-ciphers kEECDH+aRSA+AES:kRSA+AES:+AES256:RC4-SHA:!kEDH:!LOW:!EXP:!MD5:!aNULL:!eNULL
+  ssl-default-bind-ciphers kEECDH+aRSA+AES:kRSA+AES:+AES256:RC4-SHA:!kEDH:!LOW:!EXP:!MD5:!aNULL:!eNULL
 
 userlist admins
   user admin insecure-password PLACEHOLDER_PASSWORD
 
 defaults
-	mode	http
-	retries 3
-	option redispatch
-	option	dontlognull
-    timeout connect 5000
-    timeout client  500000
-    timeout server  500000
-	errorfile 400 /etc/haproxy/errors/400.http
-	errorfile 403 /etc/haproxy/errors/403.http
-	errorfile 408 /etc/haproxy/errors/408.http
-	errorfile 500 /etc/haproxy/errors/500.http
-	errorfile 502 /etc/haproxy/errors/502.http
-	errorfile 503 /etc/haproxy/errors/503.http
-	errorfile 504 /etc/haproxy/errors/504.http
-
-frontend mongo
-  bind  *:27017
-  mode tcp
-  option tcplog
-  default_backend mongo
+  mode  http
+  retries 3
+  option redispatch
+  option  dontlognull
+  timeout connect 5000
+  timeout client  500000
+  timeout server  500000
+  errorfile 400 /etc/haproxy/errors/400.http
+  errorfile 403 /etc/haproxy/errors/403.http
+  errorfile 408 /etc/haproxy/errors/408.http
+  errorfile 500 /etc/haproxy/errors/500.http
+  errorfile 502 /etc/haproxy/errors/502.http
+  errorfile 503 /etc/haproxy/errors/503.http
+  errorfile 504 /etc/haproxy/errors/504.http
 
 frontend logstash-lumberjack
   bind *:5043
@@ -44,26 +38,29 @@ frontend frontend-ssl
   option httplog
 
   acl player path_beg -i /play
-  use_backend player	if player
+  use_backend player  if player
 
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
 
-  acl swagger	 path_beg -i /swagger
-  use_backend swagger		if swagger
+  acl swagger path_beg -i /swagger
+  use_backend swagger  if swagger
 
-  acl room	 path_beg -i /rooms
-  use_backend room		if room
+  acl room path_beg -i /rooms
+  use_backend room  if room
 
-  acl roomjs	path_beg -i /roomjs
-  use_backend	roomjs	if roomjs
+  acl roomjs  path_beg -i /roomjs
+  use_backend  roomjs  if roomjs
 
   acl dockerui path_beg -i /docker
-  use_backend dockerui	if dockerui
+  use_backend dockerui  if dockerui
 
   acl mediator path_beg -i /mediator
   use_backend mediator  if mediator
-  
+
+  acl map path_beg -i /map
+  use_backend map  if map
+
   default_backend static-content
 
 frontend frontend-plain
@@ -72,19 +69,22 @@ frontend frontend-plain
   option httplog
 
   acl player path_beg -i /play
-  use_backend player	if player
+  use_backend player  if player
 
-  acl room	 path_beg -i /rooms
-  use_backend room		if room
+  acl room   path_beg -i /rooms
+  use_backend room  if room
 
-  acl swagger	 path_beg -i /swagger
-  use_backend swagger		if swagger
+  acl swagger   path_beg -i /swagger
+  use_backend swagger  if swagger
 
-  acl roomjs	path_beg -i /roomjs
-  use_backend	roomjs	if roomjs
+  acl roomjs  path_beg -i /roomjs
+  use_backend  roomjs  if roomjs
 
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
+
+  acl map path_beg -i /map
+  use_backend map if map
 
   acl mediator path_beg -i /mediator
   use_backend mediator  if mediator
@@ -94,74 +94,77 @@ frontend frontend-plain
 backend room
   mode http
   option httplog
-  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  option httpchk HEAD /rooms/v1/health HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server room1 room:9080 check
+  server room1 PLACEHOLDER_DOCKERHOST:9445 ssl check check-ssl verify none
 
 backend roomjs
   mode http
   option httplog
   balance roundrobin
-  server roomjs1 192.168.99.100:5000 check
+  server roomjs1 PLACEHOLDER_DOCKERHOST:5000 check
 
 backend concierge
   mode http
   option httplog
-  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+  option httpchk HEAD /concierge/health HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server concierge1 concierge:9081 check
+  server concierge1 PLACEHOLDER_DOCKERHOST:9444 ssl check check-ssl verify none
+
+backend map
+  mode http
+  option httplog
+  option httpchk GET /map/v1/health HTTP/1.1\r\nHost:localhost
+  balance roundrobin
+  server map1 PLACEHOLDER_DOCKERHOST:9447 ssl check check-ssl verify none
 
 backend mediator
   mode http
   option httplog
+  option httpchk GET /mediator/v1/health HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server mediator1 mediator:9446 ssl check check-ssl verify none
+  server mediator1 PLACEHOLDER_DOCKERHOST:9446 ssl check check-ssl verify none
 
 backend player
   mode http
   option httplog
+  option httpchk HEAD /play/players/health HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server player1 player:9443 ssl check check-ssl verify none
+  server player1 PLACEHOLDER_DOCKERHOST:9443 ssl check check-ssl verify none
 
 backend static-content
   mode http
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   option httplog
   balance roundrobin
-  server webapp1 webapp:8080 check inter 1m
+  server webapp1 PLACEHOLDER_DOCKERHOST:8080 check inter 1m
 
 backend dockerui
   mode http
   option httplog
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server dockerui1 192.168.99.100:9000 check
+  server dockerui1 PLACEHOLDER_DOCKERHOST:9000 check
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
   reqrep ^([^\ ]*\ /)docker[/]?(.*) \1\2
-
-backend mongo
-  mode tcp
-  option tcplog
-  balance roundrobin
-  server mongo1 mongo:27017 check
 
 backend logstash-lumberjack
   mode tcp
   option tcplog
   balance roundrobin
-  server logstash1 192.168.99.100:5043 check
+  server logstash1 PLACEHOLDER_DOCKERHOST:5043 check
 
 backend swagger
   mode http
   option httpchk HEAD /swagger/ HTTP/1.1\r\nHost:localhost
   option httplog
   balance roundrobin
-  server swagger1 192.168.99.100:8081 check
+  server swagger1 PLACEHOLDER_DOCKERHOST:8081 check
 
-listen stats 
-    bind *:1936 ssl crt /etc/ssl/proxy.pem
-    stats enable
-    stats uri /
-    stats hide-version
-    stats auth admin:PLACEHOLDER_PASSWORD
+listen stats
+  bind *:1936 ssl crt /etc/ssl/proxy.pem
+  stats enable
+  stats uri /
+  stats hide-version
+  stats auth admin:PLACEHOLDER_PASSWORD
