add map, correct ports for live site

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -52,6 +52,9 @@ frontend frontend-ssl
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
 
+  acl map path_beg -i /map
+  use_backend map if map
+
   acl swagger	 path_beg -i /swagger
   use_backend swagger		if swagger
 
@@ -93,13 +96,20 @@ backend concierge
   option httplog
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
-  server concierge1 PLACEHOLDER_DOCKERHOST:9080 check
+  server concierge1 PLACEHOLDER_DOCKERHOST:9081 check
+
+backend map
+  mode http
+  option httplog
+  option httpchk GET /map/v1/health HTTP/1.1\r\nHost:localhost
+  balance roundrobin
+  server map1 PLACEHOLDER_DOCKERHOST:9447 ssl check check-ssl verify none
 
 backend mediator
   mode http
   option httplog
   balance roundrobin
-  server mediator1 PLACEHOLDER_DOCKERHOST:9443 ssl check check-ssl verify none
+  server mediator1 PLACEHOLDER_DOCKERHOST:9446 ssl check check-ssl verify none
 
 backend player
   mode http
