--- a/haproxy-dev.cfg
+++ b/haproxy-dev.cfg
@@ -43,6 +43,9 @@ frontend frontend-ssl
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
 
+  acl map path_beg -i /map
+  use_backend map if map
+
   acl swagger	 path_beg -i /swagger
   use_backend swagger		if swagger
 
@@ -57,7 +60,7 @@ frontend frontend-ssl
 
   acl mediator path_beg -i /mediator
   use_backend mediator  if mediator
-  
+
   default_backend static-content
 
 frontend frontend-plain
@@ -79,6 +82,9 @@ frontend frontend-plain
 
   acl concierge path_beg -i /concierge
   use_backend concierge if concierge
+
+  acl map path_beg -i /map
+  use_backend map if map
 
   acl mediator path_beg -i /mediator
   use_backend mediator  if mediator
@@ -104,6 +110,13 @@ backend concierge
   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   balance roundrobin
   server concierge1 concierge:9080 check
+
+backend map
+  mode http
+  option httplog
+  option httpchk GET /map/v1/health HTTP/1.1\r\nHost:localhost
+  balance roundrobin
+  server map1 map:9443 ssl check check-ssl verify none
 
 backend mediator
   mode http
@@ -147,7 +160,7 @@ backend swagger
   balance roundrobin
   server swagger1 192.168.99.100:8081 check
 
-listen stats 
+listen stats
     bind *:1936 ssl crt /etc/ssl/proxy.pem
     stats enable
     stats uri /
