Route haproxy to syslog

--- a/haproxy-ics.cfg
+++ b/haproxy-ics.cfg
@@ -6,6 +6,7 @@ global
 	group haproxy
 
 	ssl-default-bind-ciphers kEECDH+aRSA+AES:kRSA+AES:+AES256:RC4-SHA:!kEDH:!LOW:!EXP:!MD5:!aNULL:!eNULL
+        log 127.0.0.1   local0
 
 userlist admins
   user admin insecure-password PLACEHOLDER_PASSWORD
