--- a/haproxy-dev.cfg
+++ b/haproxy-dev.cfg
@@ -1,9 +1,9 @@
 global
-	chroot /var/lib/haproxy
+	#chroot /var/lib/haproxy
+    #user haproxy
+	#group haproxy
 	stats socket /run/haproxy/admin.sock mode 660 level admin
 	stats timeout 30s
-	user haproxy
-	group haproxy
 
 	ssl-default-bind-ciphers kEECDH+aRSA+AES:kRSA+AES:+AES256:RC4-SHA:!kEDH:!LOW:!EXP:!MD5:!aNULL:!eNULL
 
@@ -132,7 +132,6 @@ backend dockerui
   server dockerui1 192.168.99.100:9000 check
   acl auth_ok http_auth(admins)
   http-request auth unless auth_ok
-  reqrep ^([^\ ]*\ /)docker[/]?(.*) \1\2
 
 backend logstash-lumberjack
   mode tcp
@@ -142,10 +141,13 @@ backend logstash-lumberjack
 
 backend swagger
   mode http
-  option httpchk HEAD /swagger/ HTTP/1.1\r\nHost:localhost
+  acl swagger_root path -i /swagger
+  redirect location /swagger/ if swagger_root
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   option httplog
   balance roundrobin
   server swagger1 192.168.99.100:8081 check
+
 
 listen stats
     bind *:1936 ssl crt /etc/ssl/proxy.pem
