--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,10 +1,10 @@
 global
 	log PLACEHOLDER_LOGHOST	syslog
-	chroot /var/lib/haproxy
+	#chroot /var/lib/haproxy
 	stats socket /run/haproxy/admin.sock mode 660 level admin
 	stats timeout 30s
-	user haproxy
-	group haproxy
+	#user haproxy
+	#group haproxy
 
 	ssl-default-bind-ciphers kEECDH+aRSA+AES:kRSA+AES:+AES256:RC4-SHA:!kEDH:!LOW:!EXP:!MD5:!aNULL:!eNULL
 
@@ -151,7 +151,10 @@ backend logstash-lumberjack
 
 backend swagger
   mode http
-  option httpchk HEAD /swagger/ HTTP/1.1\r\nHost:localhost
+  acl swagger_root path -i /swagger
+  redirect location /swagger/ if swagger_root
+
+  option httpchk HEAD / HTTP/1.1\r\nHost:localhost
   option httplog
   balance roundrobin
   server swagger1 PLACEHOLDER_DOCKERHOST:8081 check
