--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ jdk:
 
 script:
   - docker login -e="${DOCKER_EMAIL}" -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}"
-  - docker build -t ${DOCKER_REPO}/${DOCKER_IMAGE} player-wlpcfg/
+  - docker build -t ${DOCKER_REPO}/${DOCKER_IMAGE} ${DOCKER_BUILDDIR}
   - docker push ${DOCKER_REPO}/${DOCKER_IMAGE}
